crates/willikins-providers-buildkite/tests/snapshots/catalog_parity__buildkite_cluster_get_spec.snap
---
source: crates/willikins-providers-buildkite/tests/catalog_parity.rs
assertion_line: 61
expression: "spec_json(BuildkiteClusterGet::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Resolve a Buildkite cluster's human-written name to its id.",
  "inputs": {
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteClusterName"
      }
    },
    "org": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteOrg"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteToken"
      }
    }
  },
  "key": [],
  "name": "buildkite.cluster.get",
  "outputs": {
    "cluster": "BuildkiteClusterId"
  },
  "pure": true
}
