crates/willikins-providers-buildkite/tests/snapshots/catalog_parity__buildkite_pipeline_bootstrap_ensure_spec.snap
---
source: crates/willikins-providers-buildkite/tests/catalog_parity.rs
expression: "spec_json(BuildkitePipelineBootstrapEnsure::new(test_client()).spec())"
---
{
  "class": "destructive",
  "description": "Write a willikins-owned Buildkite pipeline's stored YAML configuration from a bootstrap file this document renders.",
  "inputs": {
    "configuration": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "RepoFile"
      }
    },
    "org": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteOrg"
      }
    },
    "slug": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "BuildkitePipelineSlug"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "BuildkiteToken"
      }
    }
  },
  "key": [
    "org",
    "slug"
  ],
  "name": "buildkite.pipeline.bootstrap.ensure",
  "outputs": {
    "slug": "BuildkitePipelineSlug"
  },
  "pure": false
}
